--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>DC Comics</title>
+<title>DC Mythcrafting</title>
 </head>
 <body>
-<h1>DC Comics</h1>
+<h1>DC Mythcrafting</h1>
 </body>
 </html>
