--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
 <h1>DC Mythcrafting</h1>
+  <ul>
+    <li><a href="phantomlady.html">Phantom Lady</a></li>
+  </ul>
 </body>
 </html>
