--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>DC Mythcrafting</h1>
   <ul>
     <li><a href="phantomlady.html">Phantom Lady</a></li>
+    <li><a href="cyclotron.html">Cyclotron</a></li>
   </ul>
 </body>
 </html>
