--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ul>
     <li><a href="phantomlady.html">Phantom Lady</a></li>
     <li><a href="cyclotron.html">Cyclotron</a></li>
+    <li><a href="flash.html">Flash</a></li>
   </ul>
 </body>
 </html>
